# lifeops-goals-service

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  PRE-SPRINT-ONE-SUMMARY.md  README.md  commitlint-config.js  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: auto-pr.yml  ci.yml  codeql.yml  commit-check.yml
docker/: entrypoint.sh  nginx.conf
docs/: SPRINT_PLAN.md
scripts/: generate_keys.py
src/app/: lifespan.py  main.py
src/app/api/: health.py
src/app/api/internal/: check_access.py
src/app/config/: database.py  redis.py  settings.py
src/app/constants/: __init__.py  goals.py  limits.py  plans.py
src/app/core/: logging.py
src/app/core/dependencies/: auth.py  rate_limit.py
src/app/core/exceptions/: __init__.py  base.py
src/app/events/: event_types.py  publisher.py  subscribers.py
src/app/graphql/: enums.py  inputs.py  mutations.py  queries.py  scalars.py  schema.py  types.py
src/app/middleware/: logging_middleware.py  rate_limit_middleware.py  security_headers.py
src/app/models/: action.py  goal.py  phase.py
src/app/repositories/: __init__.py  action_repository.py  goal_repository.py  phase_repository.py
src/app/schemas/: __init__.py  action.py  goal.py  phase.py
src/app/services/: __init__.py  action_service.py  goal_service.py  phase_service.py
src/app/workers/: momentum_worker.py  recurring_action_worker.py
tests/: conftest.py
tests/integration/: test_graphql.py  test_health.py  test_sprint2_graphql.py  test_sprint3_graphql.py
tests/unit/: test_action_service.py  test_enums.py  test_exceptions.py  test_goal_service.py  test_momentum_worker.py  test_phase_service.py  test_recurrence.py  test_settings.py
(+1 files in other folders)
